--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         var elem = document.querySelector("input[name='URL']")
         if (arg == "mp3") {
           document.form.audio.value = elem.value;
-          document.forms[0].action="/dl_audio";
+          document.forms[0].action="/audio";
         } else if (arg == "mp4") {
           document.forms[1].value = elem.value;
         }
