--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       function appendfor(arg) {
         var elem = document.querySelector("input[name='URL']")
         if (arg == "mp3") {
-          document.form.audio.value = elem.value;
+          document.forms[0].audio.value = elem.value;
           document.forms[0].action="/audio";
         } else if (arg == "mp4") {
           document.forms[1].value = elem.value;
